--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.12",
+    "@heroicons/react": "^2.0.16",
+    "@prisma/client": "4.11.0",
     "@types/node": "18.14.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "add": "^2.0.6",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "prisma": "^4.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
